--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:c": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -57,7 +58,12 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^6.4.3",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.22",
     "@types/styled-components": "^5.1.16",
-    "sass": "^1.49.0"
+    "craco-swc": "^0.2.0",
+    "sass": "^1.49.0",
+    "typescript": "^4.6.2"
   }
 }
