--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-undef": 0
+    }
   },
   "browserslist": {
     "production": [
