--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
       "react-app/jest"
     ],
     "rules": {
-      "no-undef": 0
+      "no-undef": 0,
+      "@typescript-eslint/no-unused-expressions": 0
     }
   },
   "browserslist": {
